gccida/c0/verify_tree
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/verify_tree/src/c-common.c:1492:1: error: must use 'enum' tag to refer to type 'tree_code'
tree_code code; // [rsp+5Ch] [rbp-44h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/verify_tree/src/c-common.c:1640:23: error: use of undeclared identifier 'tree_code'; did you mean 'tree_cons'?
max = first_rtl_op( ( tree_code)( unsigned __int8)*( ( _DWORD *)&xa->common + 4)); 
                      ^~~~~~~~~
                      tree_cons
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/verify_tree/src/tree.h:2477:13: note: 'tree_cons' declared here
extern tree tree_cons                   PARAMS ((tree, tree, tree));
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/verify_tree/src/c-common.c:1640:35: error: expected expression
max = first_rtl_op( ( tree_code)( unsigned __int8)*( ( _DWORD *)&xa->common + 4)); 
                                  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/verify_tree/src/obj/c-common.o] Error 1
